--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  hgroup, menu, nav, section { display: block; }
  </style>
 </head>
-<body>
+<body background = le fishe.jpg>
  <p>Привет, мир</p>
 </body>
 </html>
