--- a/fourth.html
+++ b/fourth.html
@@ -18,14 +18,13 @@
  </style>
 </head>
 <body>
- <p align=center> <h1> &sect Некоторые элементы в HTML5 </h1> </p>
+ <a name = top> </a>
+ <h6> <a href = index.html> Назад </a> <a href = #bottom> Вниз </a> </h6>
  <hr>
- <p> <I> Страницы </I> </p>
- <OL type = a>
-  <LI> <a href = first.html> первая </a>
-  <LI> <a href = second.html> вторая </a>
-  <LI> <a href = fourth.html> последняя </a>
-  <LI> <a href = fifth.html> постскриптум </a>
- </OL>
+ <p align=center> <h1> &sect Аудио </h1> </p>
+ <hr>
+ <audio controls = 1 loop = 1 src = "music.mp3"> 
+ <p> <a href = #top> Вверх </a> </h6>
+ <a name = bottom> </a>
 </body>
 </html>
