--- a/second.html
+++ b/second.html
@@ -18,14 +18,21 @@
  </style>
 </head>
 <body>
- <p align=center> <h1> &sect Некоторые элементы в HTML5 </h1> </p>
+ <a name = top> </a>
+ <h6> <a href = index.html> Назад </a> <a href = #bottom> Вниз </a> </h6>
  <hr>
- <p> <I> Страницы </I> </p>
- <OL type = a>
-  <LI> <a href = first.html> первая </a>
-  <LI> <a href = second.html> вторая </a>
-  <LI> <a href = fourth.html> последняя </a>
-  <LI> <a href = fifth.html> постскриптум </a>
- </OL>
+ <p align=center> <h1> &sect Графика</h1> </p>
+ <hr>
+ <p> В HTML5 доступны такие вещи, как:
+ <p> Изображение
+ <p>
+ <img source src = "Компьютерная модель.jpg">
+ <p> Видео
+ <p>
+ <video loop = 1 controls = 1>
+    <source src = "1984.mp4" />
+ </video>
+ <p> <a href = #top> Вверх </a> </h6>
+ <a name = bottom> </a>
 </body>
 </html>
